# CS490StackedProject

./: .env.example  .gitignore  CodingStandards.md  README.md  ruff.toml
backend/: .env  .vercelignore  auth.py  config.py  database.py  index.py  logging_config.py  main.py  models.py  pyproject.toml  requirements.txt  run_analytics_tests.bat  run_analytics_tests.sh  schema.py  schemas.py  test.db  test_results.txt  vercel.json
backend/Sprint1/: config.py  main.py  requirements.txt
backend/backend-farhan/: schemas.py
backend/database/: __init__.py  auth.py  database.py
backend/dependencies/: auth.py
backend/models/: __init__.py
backend/router/: jobs.py
backend/routers/: auth.py  career_preferences.py  company.py  documents.py  education.py  follow_ups.py  frontend_logs.py  interviews.py  job_documents.py  jobs.py  jobs_sorter.py  library.py  outcomes.py  profile.py  recruiter.py  skills.py  users.py
backend/scripts/: create_tables.sql  import_from_snapshot.py  schema.sql  seed.py  test_delete_diagnostic.py
backend/test/: test_auth.py  test_jobs.py
backend/tests/: conftest.py  test_address.py  test_analytics.py  test_applied_jobs.py  test_auth_utils.py  test_company.py  test_credentials.py  test_document_metadata.py  test_document_version.py  test_documents.py  test_education.py  test_job_activity.py  test_job_document_link.py  test_position.py  test_profile.py  test_router_auth.py  test_router_company.py  test_router_documents.py  test_router_documents_archive.py  test_router_documents_download.py  test_router_documents_security.py  test_router_jobs.py  (+9 more)
(+71 files in other folders)
